clusters/home/archives/superset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset
  labels:
    name: superset
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 999m # Bypasses the 413 Request Entity Too Large error
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: SQL Editor & Visualizations
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: https://superset.apache.org/img/superset-mark-dark.svg
    gethomepage.dev/name: Apache Superset
    gethomepage.dev/weight: "2"
spec:
  rules:
  - host: superset.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: superset
            port: 
              number: 8088
